; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-phinodes.c_remove_phi_args.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-phinodes.c_remove_phi_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @remove_phi_args(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @phi_nodes(i32 %6)
  store i64 %7, i64* %3, align 8
  br label %8

8:                                                ; preds = %17, %1
  %9 = load i64, i64* %3, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load i64, i64* %3, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @remove_phi_arg_num(i64 %12, i32 %15)
  br label %17

17:                                               ; preds = %11
  %18 = load i64, i64* %3, align 8
  %19 = call i64 @PHI_CHAIN(i64 %18)
  store i64 %19, i64* %3, align 8
  br label %8

20:                                               ; preds = %8
  ret void
}

declare dso_local i64 @phi_nodes(i32) #1

declare dso_local i32 @remove_phi_arg_num(i64, i32) #1

declare dso_local i64 @PHI_CHAIN(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
